# cardiovasculardiseases

./: .gitignore  CVD_knn.ipynb  DEPLOYMENT.md  README.md  index.html  render.yaml
.github/workflows/: deploy-pages.yml  ml-train.yml
AI Cardiologist.Doc/: Current_Document_References_REF.txt  generate_ai_cardiologist_requirements.py  update_backlog_status.py
ai-cardiologist-backend/: requirements.txt
ai-cardiologist-docs/: ARCHITECTURE.md  DATA_MODEL.md  METHODOLOGY.md  MLOPS.md  README.md  REVIEW_REMEDIATION.md  references.json
ai-cardiologist-ml/: README.md  pyproject.toml  requirements.txt
ai-cardiologist-ml/data/: benchmark_holdout_test.xlsx
ai-cardiologist-ml/models/: global_importance.json  leaderboard.json
ai-cardiologist-ml/models/artifacts/: anfis.manifest.json  decision_tree.manifest.json  ensemble_voting.manifest.json  knn.manifest.json  logistic_regression.manifest.json  naive_bayes.manifest.json  neural_network.manifest.json  random_forest.manifest.json  registry.json  svm.manifest.json  xgboost.manifest.json
ai-cardiologist-ml/scripts/: benchmark.py  eda.py  train.py
ai-cardiologist-ml/src/aicardio/: __init__.py  constants.py  data.py  evaluation.py  explainability.py  export.py  llcp2024.py  models.py  preprocessing.py
ai-cardiologist-ml/tests/: test_data.py  test_models.py  test_preprocessing_leakage.py
ai-cardiologist-web/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
assets/: index-B5Jsydb1.css  index-C_NzsHc6.js  index.es-B0HGgVJ3.js
scripts/: deploy-web.ps1  start-local.ps1
(+53 files in other folders)
