[project]
name = "ai-cardiologist-ml"
version = "0.1.0"
description = "BRFSS CVD classification training pipeline (AI Cardiologist research)"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "imbalanced-learn>=0.12",
  "eli5>=0.13",
  "shap>=0.44",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
